rust/bindings/adbc.rs


 For standard options, drivers must always support getting the
 option value (if they support getting option values at all) via
 the type specified in the option. (For example, an option set via
 SetOptionDouble must be retrievable via GetOptionDouble.) Drivers
 may also support getting a converted option value via other
 getters if needed. (For example, getting the string
 representation of a double option.)

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `statement` (direction in) - The statement.
 * `key` (direction in) - The option to get.
 * `value` (direction out) - The option value.
 * `length` (direction in, out) - The length of value.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_FOUND if the option is not recognized.*/
    pub fn AdbcStatementGetOption(
        statement: *mut AdbcStatement,
        key: *const ::std::os::raw::c_char,
        value: *mut ::std::os::raw::c_char,
        length: *mut usize,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get a bytestring option of the statement.

 This must always be thread-safe (other operations are not), though
 given the semantics here, it is not recommended to call
 GetOptionBytes concurrently with itself.

 length must be provided and must be the size of the buffer pointed
 to by value. If there is sufficient space, the driver will copy
 the option value to buffer and set length to the size of the
 actual value. If the buffer is too small, no data will be written
 and length will be set to the required length.

 In other words:

 - If output length <= input length, value will contain a value
 with length bytes.
 - If output length > input length, nothing has been written to
 value.

 For standard options, drivers must always support getting the
 option value (if they support getting option values at all) via
 the type specified in the option. (For example, an option set via
 SetOptionDouble must be retrievable via GetOptionDouble.) Drivers
 may also support getting a converted option value via other
 getters if needed. (For example, getting the string
 representation of a double option.)

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `statement` (direction in) - The statement.
 * `key` (direction in) - The option to get.
 * `value` (direction out) - The option value.
 * `length` (direction in, out) - The option value length.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_FOUND if the option is not recognized.*/
    pub fn AdbcStatementGetOptionBytes(
        statement: *mut AdbcStatement,
        key: *const ::std::os::raw::c_char,
        value: *mut u8,
        length: *mut usize,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get an integer option of the statement.

 This must always be thread-safe (other operations are not).

 For standard options, drivers must always support getting the
 option value (if they support getting option values at all) via
 the type specified in the option. (For example, an option set via
 SetOptionDouble must be retrievable via GetOptionDouble.) Drivers
 may also support getting a converted option value via other
 getters if needed. (For example, getting the string
 representation of a double option.)

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `statement` (direction in) - The statement.
 * `key` (direction in) - The option to get.
 * `value` (direction out) - The option value.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_FOUND if the option is not recognized.*/
    pub fn AdbcStatementGetOptionInt(
        statement: *mut AdbcStatement,
        key: *const ::std::os::raw::c_char,
        value: *mut i64,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get a double option of the statement.

 This must always be thread-safe (other operations are not).

 For standard options, drivers must always support getting the
 option value (if they support getting option values at all) via
 the type specified in the option. (For example, an option set via
 SetOptionDouble must be retrievable via GetOptionDouble.) Drivers
 may also support getting a converted option value via other
 getters if needed. (For example, getting the string
 representation of a double option.)

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `statement` (direction in) - The statement.
 * `key` (direction in) - The option to get.
 * `value` (direction out) - The option value.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_FOUND if the option is not recognized.*/
    pub fn AdbcStatementGetOptionDouble(
        statement: *mut AdbcStatement,
        key: *const ::std::os::raw::c_char,
        value: *mut f64,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get the schema for bound parameters.

 This retrieves an Arrow schema describing the number, names, and
 types of the parameters in a parameterized statement. The fields
 of the schema should be in order of the ordinal position of the
 parameters; named parameters should appear only once.

 If the parameter does not have a name, or the name cannot be
 determined, the name of the corresponding field in the schema will
 be an empty string. If the type cannot be determined, the type of
 the corresponding field will be NA (NullType).

 This should be called after AdbcStatementPrepare.

 # Returns

ADBC_STATUS_NOT_IMPLEMENTED if the schema cannot be determined.*/
    pub fn AdbcStatementGetParameterSchema(
        statement: *mut AdbcStatement,
        schema: *mut ArrowSchema,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Set a string option on a statement.
 # Arguments

* `statement` (direction in) - The statement.
 * `key` (direction in) - The option to set.
 * `value` (direction in) - The option value.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_IMPLEMENTED if the option is not recognized.*/
    pub fn AdbcStatementSetOption(
        statement: *mut AdbcStatement,
        key: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Set a bytestring option on a statement.

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `statement` (direction in) - The statement.
 * `key` (direction in) - The option to set.
 * `value` (direction in) - The option value.
 * `length` (direction in) - The option value length.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_IMPLEMENTED if the option is not recognized*/
    pub fn AdbcStatementSetOptionBytes(
        statement: *mut AdbcStatement,
        key: *const ::std::os::raw::c_char,
        value: *const u8,
        length: usize,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Set an integer option on a statement.

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `statement` (direction in) - The statement.
 * `key` (direction in) - The option to set.
 * `value` (direction in) - The option value.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_IMPLEMENTED if the option is not recognized*/
    pub fn AdbcStatementSetOptionInt(
        statement: *mut AdbcStatement,
        key: *const ::std::os::raw::c_char,
        value: i64,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Set a double option on a statement.

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `statement` (direction in) - The statement.
 * `key` (direction in) - The option to set.
 * `value` (direction in) - The option value.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_IMPLEMENTED if the option is not recognized*/
    pub fn AdbcStatementSetOptionDouble(
        statement: *mut AdbcStatement,
        key: *const ::std::os::raw::c_char,
        value: f64,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Execute a statement and get the results as a partitioned
 result set.

 # Arguments

* `statement` (direction in) - The statement to execute.
 * `schema` (direction out) - The schema of the result set.
 * `partitions` (direction out) - The result partitions.
 * `rows_affected` (direction out) - The number of rows affected if known,
 else -1. Pass NULL if the client does not want this information.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_IMPLEMENTED if the driver does not support
 partitioned results*/
    pub fn AdbcStatementExecutePartitions(
        statement: *mut AdbcStatement,
        schema: *mut ArrowSchema,
        partitions: *mut AdbcPartitions,
        rows_affected: *mut i64,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
/**Common entry point for drivers via the driver manager
 (which uses dlopen(3)/LoadLibrary). The driver manager is told
 to load a library and call a function of this type to load the
 driver.

 Although drivers may choose any name for this function, the
 recommended name is "AdbcDriverInit", or a name derived from the
 name of the driver's shared library as follows: remove the 'lib'
 prefix (on Unix systems) and all file extensions, then PascalCase
 the driver name, append Init, and prepend Adbc (if not already
 there). For example:

 - libadbc_driver_sqlite.so.2.0.0 -> AdbcDriverSqliteInit
 - adbc_driver_sqlite.dll -> AdbcDriverSqliteInit
 - proprietary_driver.dll -> AdbcProprietaryDriverInit

 # Arguments

* `version` (direction in) - The ADBC revision to attempt to initialize (see
 ADBC_VERSION_1_0_0).
 * `driver` (direction out) - The table of function pointers to
 initialize. Should be a pointer to the appropriate struct for
 the given version (see the documentation for the version).
 * `error` (direction out) - An optional location to return an error message
 if necessary.
 # Returns

ADBC_STATUS_OK if the driver was initialized, or
 ADBC_STATUS_NOT_IMPLEMENTED if the version is not supported. In
 that case, clients may retry with a different version.*/
pub type AdbcDriverInitFunc = ::std::option::Option<
    unsafe extern "C" fn(
        version: ::std::os::raw::c_int,
        driver: *mut ::std::os::raw::c_void,
        error: *mut AdbcError,
    ) -> AdbcStatusCode,
>;
